--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,47 @@
 apply plugin: 'com.android.application'
 
+repositories {
+
+    maven {
+        url "https://raw.github.com/reversecoder/rc-logger-demo/releases"
+    }
+
+    maven {
+        url "https://raw.github.com/reversecoder/rc-logger-demo/snapshots"
+    }
+}
+
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+
+    compileSdkVersion appCompileSdkVersion
+    buildToolsVersion appBuildToolsVersion
+
     defaultConfig {
         applicationId "com.reversecoder.logger.demo"
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
-//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        minSdkVersion appMinSdkVersion
+        targetSdkVersion appTargetSdkVersion
+        versionCode appVersionCode
+        versionName appVersionName
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-//    testImplementation 'junit:junit:4.12'
-//    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile "com.android.support:appcompat-v7:$supportlibraryVersion"
     compile project(':logger')
 }
