--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,31 @@
 buildscript {
     
     repositories {
-//        google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-//        classpath 'com.novoda:bintray-release:0.5.0'
     }
 }
 
 allprojects {
     repositories {
-//        google()
         jcenter()
     }
+}
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+
+    ext.appVersionCode = 100
+    ext.appVersionName = "1.0.0"
+    ext.appMinSdkVersion = 15
+    ext.appTargetSdkVersion = 25
+    ext.appCompileSdkVersion = 25
+    ext.appBuildToolsVersion = '25.0.3'
+    ext.supportlibraryVersion = '25.3.1'
 }
 
 task clean(type: Delete) {
