--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile "com.android.support:appcompat-v7:$supportlibraryVersion"
+//    compile 'com.reversecoder.logger:rc-logger:1.0.0'
     compile project(':logger')
 }
