--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -60,8 +60,8 @@ uploadArchives {
 
         pom.project {
             groupId = 'com.reversecoder.logger'
-//            version = '1.0.0-SNAPSHOT'
-            version = '1.0.0'
+            version = '1.0.0-SNAPSHOT'
+//            version = '1.0.0'
             artifactId = 'rc-logger'
             packaging 'aar'
         }
