--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,17 @@ buildscript {
     
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta7'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
@@ -23,10 +25,10 @@ allprojects {
     ext.appVersionCode = 100
     ext.appVersionName = "1.0.0"
     ext.appMinSdkVersion = 15
-    ext.appTargetSdkVersion = 25
-    ext.appCompileSdkVersion = 25
-    ext.appBuildToolsVersion = '25.0.3'
-    ext.supportlibraryVersion = '25.3.1'
+    ext.appTargetSdkVersion = 26
+    ext.appCompileSdkVersion = 26
+    ext.appBuildToolsVersion = '26.0.2'
+    ext.supportlibraryVersion = '26.1.0'
 }
 
 task clean(type: Delete) {
